# llm-playground

./: .gitignore  audio_assistant.py  docker-compose.yaml  email_data_generator.py  iterative_refinment.py  lc_dynamic_prompt.py  lc_embedding.py  lc_memory.py  lc_tools_demo.py  news_generator.py  pyproject.toml  question_answering_on_pdf.py  requirements.txt  summarize_text.py
assets/: transcript.txt
libs/: client.py  embedding.py  oss.py
